Don't use --enable-preview needlessly